--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap');
+
+html,body {
+  height: 100%;
+  width: 100%;
   margin: 0;
+  background-color: #f5f5f5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +15,51 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.neonText {
+  animation: flicker 1.7s infinite alternate;
+  color: #fff;
+}
+
+h1 {
+  font-size: 4.2rem;    
+}
+
+/* Flickering animation */
+@keyframes flicker {
+    
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+
+      text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px #fff,
+      0 0 40px #ef426f,
+      0 0 80px #ef426f,
+      0 0 90px #ef426f,
+      0 0 100px #ef426f,
+      0 0 150px #ef426f;
+  
+  }
+  
+  20%, 24%, 55% {        
+      text-shadow: none;
+  }    
+}
+
+
+/* Additional styling */
+  
+h1 {
+ font-size: 3.8rem;
+}
+
+
+h1, h2 {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 200;
+  font-family: Caveat;
 }
