--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html,body {
   width: 100%;
   margin: 0;
   background-color: #f5f5f5;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: Roboto,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -61,5 +61,5 @@ h1, h2 {
   text-align: center;
   text-transform: uppercase;
   font-weight: 200;
-  font-family: Caveat;
+  font-family: "Caveat";
 }
